# 42-rag_against_the_machines

./: Makefile  pyproject.toml
src/: main.py
