[project]
name = "rag-against-the-machines"
version = "0.1.6"
description = "A RAG system that answers queries related to a codebase"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
]

[tool.mypy]
plugins = []
mypy_path = "stubs"

[tool.ruff]
line-length = 79
[tool.ruff.lint]
select = ["E", "F", "B", "I"]

